# sample-trust-safety-orchestration-agent

./: .gitignore  CONTRIBUTING.md  DESCRIPTION.md  Makefile  NOTICE  README.md  pyproject.toml  samconfig.toml  setup.sh  template.yaml
.github/workflows/: ci.yml
docs/: architecture.drawio  design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: architecture-demo.html
frontend/scripts/: mock-api.mjs
frontend/src/: App.tsx
lambdas/: requirements.txt
lambdas/handlers/: anomaly_handler.py  appeal_handler.py  audit_handler.py  auth_handler.py  case_handler.py  confidence_calculator.py  config_handler.py  crisis_handler.py  enforcement_executor.py  enforcement_handler.py  escalation_handler.py  evidence_assembler.py  health_handler.py  intelligence_handler.py  metrics_handler.py  policy_router.py  review_handler.py  reviewer_handler.py  websocket_handler.py
lambdas/processors/: behavioral_processor.py  bulk_detector.py  notification_processor.py  profile_processor.py
lambdas/repositories/: appeal_repository.py  audit_repository.py  base.py  blocklist_repository.py  case_repository.py  config_repository.py  evidence_repository.py  metrics_repository.py  review_queue_repository.py  reviewer_repository.py  websocket_repository.py
lambdas/services/: anomaly_detection_service.py  audit_service.py  circuit_breaker_service.py  confidence_calculator_service.py  (+15 more)
scripts/: live_simulator.py  seed_demo_data.py
statemachines/: bulk_action_workflow.asl.json  investigation_workflow.asl.json
(+52 files in other folders)
