[project]
name = "trust-safety-orchestration-agent"
version = "1.0.0"
description = "Autonomous Trust & Safety orchestration system on AWS"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "ulid-py>=1.1.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=5.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["lambdas/tests"]
